--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "homepage": "https://github.com/karthikb351/telegram-discord-sync#readme",
   "dependencies": {
     "@google-cloud/functions-framework": "^1.9.0",
+    "@google-cloud/logging-winston": "^4.1.0",
+    "@google-cloud/pubsub": "^2.16.1",
     "axios": "^0.21.1",
     "concurrently": "^6.2.0",
     "express": "^4.17.1",
