feat: CF worker for prod+staging

--- a/.github/workflows/deploy-cf-worker.yml
+++ b/.github/workflows/deploy-cf-worker.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           workingDirectory: 'telegram-image-proxy'
+          environment: 'production'
           secrets: |
             BOT_TOKEN
         env:
