--- a/telegram-image-proxy/wrangler.toml
+++ b/telegram-image-proxy/wrangler.toml
@@ -1,8 +1,12 @@
-name = "telegram-image-proxy"
 type = "javascript"
-
 account_id = "43491473cc56d7e1ce9f8fdb6ad0c071"
 workers_dev = false
 zone_id = "739e9564e120920c0e6409c5748c2540"
+
+[env.production]
+name = "telegram-image-proxy-production"
 routes = ["https://api.reroll.in/telegram-image-proxy/*"]
 
+[env.staging]
+name = "telegram-image-proxy-staging"
+routes = ["https://staging-api.reroll.in/telegram-image-proxy/*"]
