--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "outDir": "build",
-    "esModuleInterop": true,
-    "lib": ["DOM"]
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*.ts",
